[tool.poetry]
name = "Lucky Hack | Vplus"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flet.macos]
entitlement."com.apple.security.personal-information.photos-library" = true